# adskalman-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md  linear_observation_model.rs  motion_model.rs  nonlinear_observation.rs  offline_filtering.rs  offline_smoothing.rs  online_tracking.rs  plot_csv.py  print_csv.rs
examples/src/: lib.rs  linear_observation_model.rs  motion_model.rs  print_csv.rs
src/: error.rs  lib.rs  state_and_covariance.rs
tests/: integration.rs
tests/data/: offline_smoothing.csv  online_tracking.csv
