[package]
name = "adskalman"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
nalgebra = {version="0.21", default-features=false}
num-traits = {version="0.2", default-features=false}
log = { version = "0.4", optional=true }
itertools = {version="0.9", default-features=false}
approx = {version="0.3", default-features=false}

[features]
default = ["std"]
std = ["log"]

[workspace]
members = ["examples"]
