[package]
name = "adskalman-examples"
description = "Examples for the adskalman crate"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.32"
adskalman = {path=".."}
nalgebra-rand-mvn = {git="https://github.com/strawlab/nalgebra-rand-mvn", rev="40dd19c5967b24389452aa8c540f643b10fe4e34"}
env_logger = "0.10"
log = { version = "0.4", features = ["release_max_level_debug"] }
anyhow = "1.0"
