[package]
name = "adskalman-examples"
description = "Examples for the adskalman crate"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
nalgebra = { workspace = true }
adskalman = { path = ".." }
nalgebra-rand-mvn = "0.1.0"
env_logger = "0.11"
log = { version = "0.4", features = ["release_max_level_debug"] }
anyhow = "1.0"
